k8s/etcd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd-cluster-service
  namespace: pet-project
spec:
  clusterIP: None
  selector:
    app: etcd-cluster
  ports:
  - name: client
    port: 2379
    targetPort: 2379
  - name: peer
    port: 2380
    targetPort: 2380
