k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-service
  namespace: pet-project
spec:
  clusterIP: None
  selector:
    app: postgres-cluster
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
  - name: patroni
    port: 8008
    targetPort: 8008
