k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager-service
  namespace: pet-project
spec:
  selector:
    app: task-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      type: ClusterIP
